# Okular-v3d-Embedded-Plugin-Code

./: .gitmodules  CMakeLists.txt  generator_pdf.cpp  generator_pdf.h
